# cpp_designpatterns

./: CMakeLists.txt
builder/: CMakeLists.txt  builder.cpp  builder.h  builder_exercise.cpp  builder_facet.cpp  builder_facet.h  builder_groovystyle.cpp
factory/: CMakeLists.txt  factory.cpp  factory_abstract.cpp  factory_exercise.cpp  factory_functional.cpp  factory_inner.cpp  factory_method.cpp  factory_point_example.cpp
prototype/: CMakeLists.txt  prototype.cpp  prototype_exercise.cpp  prototype_factory.cpp  prototype_serialization.cpp
singleton/: CMakeLists.txt  singleton.cpp  singleton_multiton.cpp
strategy/: CMakeLists.txt  dynamic_strategy.cpp  static_strategy.cpp
