# factory executables
add_executable(factory_point  factory_point_example.cpp)
add_executable(factory_method factory_method.cpp)
add_executable(factory        factory.cpp)
add_executable(factory_inner        factory_inner.cpp)
add_executable(factory_abstract        factory_abstract.cpp)
add_executable(factory_functional        factory_functional.cpp)
add_executable(factory_exercise        factory_exercise.cpp)
